force-app/main/default/objects/NotionWidgetColumn__mdt/NotionWidgetColumn__mdt.object-meta.xml
<CustomObject>
    <description>Column configuration for Notion widgets, defining which properties to display and how to render them</description>
    <label>Notion Widget Column</label>
    <pluralLabel>Notion Widget Columns</pluralLabel>
</CustomObject>