force-app/main/default/objects/NotionWidgetColumn__mdt/fields/ColumnWidth__c.field-meta.xml
<CustomField>
    <fullName>ColumnWidth__c</fullName>
    <description>Optional fixed column width in pixels</description>
    <label>Column Width</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>