force-app/main/default/objects/NotionWidgetColumn__mdt/fields/DisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>DisplayOrder__c</fullName>
    <defaultValue>1</defaultValue>
    <description>The display order of this column (1-based)</description>
    <label>Display Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>