force-app/main/default/objects/NotionWidgetColumn__mdt/fields/IsSortable__c.field-meta.xml
<CustomField>
    <fullName>IsSortable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this column can be used for sorting</description>
    <label>Is Sortable</label>
    <type>Checkbox</type>
</CustomField>