force-app/main/default/objects/NotionWidgetColumn__mdt/fields/IsVisible__c.field-meta.xml
<CustomField>
    <fullName>IsVisible__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this column is visible in the widget</description>
    <label>Is Visible</label>
    <type>Checkbox</type>
</CustomField>