force-app/main/default/objects/NotionWidgetColumn__mdt/fields/NotionPropertyType__c.field-meta.xml
<CustomField>
    <fullName>NotionPropertyType__c</fullName>
    <description>The type of the Notion property, used to determine how to render the value</description>
    <label>Notion Property Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>title</fullName>
                <label>Title</label>
            </value>
            <value>
                <fullName>rich_text</fullName>
                <label>Rich Text</label>
            </value>
            <value>
                <fullName>number</fullName>
                <label>Number</label>
            </value>
            <value>
                <fullName>select</fullName>
                <label>Select</label>
            </value>
            <value>
                <fullName>multi_select</fullName>
                <label>Multi-select</label>
            </value>
            <value>
                <fullName>date</fullName>
                <label>Date</label>
            </value>
            <value>
                <fullName>checkbox</fullName>
                <label>Checkbox</label>
            </value>
            <value>
                <fullName>url</fullName>
                <label>URL</label>
            </value>
            <value>
                <fullName>email</fullName>
                <label>Email</label>
            </value>
            <value>
                <fullName>phone_number</fullName>
                <label>Phone Number</label>
            </value>
            <value>
                <fullName>relation</fullName>
                <label>Relation</label>
            </value>
            <value>
                <fullName>people</fullName>
                <label>People</label>
            </value>
            <value>
                <fullName>files</fullName>
                <label>Files</label>
            </value>
            <value>
                <fullName>formula</fullName>
                <label>Formula</label>
            </value>
            <value>
                <fullName>rollup</fullName>
                <label>Rollup</label>
            </value>
            <value>
                <fullName>status</fullName>
                <label>Status</label>
            </value>
            <value>
                <fullName>created_time</fullName>
                <label>Created Time</label>
            </value>
            <value>
                <fullName>last_edited_time</fullName>
                <label>Last Edited Time</label>
            </value>
            <value>
                <fullName>created_by</fullName>
                <label>Created By</label>
            </value>
            <value>
                <fullName>last_edited_by</fullName>
                <label>Last Edited By</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>