force-app/main/default/objects/NotionWidgetColumn__mdt/fields/NotionWidget__c.field-meta.xml
<CustomField>
    <fullName>NotionWidget__c</fullName>
    <description>The parent widget configuration this column belongs to</description>
    <label>Notion Widget</label>
    <referenceTo>NotionWidget__mdt</referenceTo>
    <relationshipLabel>Columns</relationshipLabel>
    <relationshipName>Columns</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>